package hk.edu.polyu.comp.comp2021.cvfs.model;

public enum  CommandType {
    invalid, newDisk, newDoc, newDir, delete, rename, changeDir, list, rList, newSimpleCri, IsDocument, newNegation, newBinaryCri, printAllCriteria, search, rsearch,undo,redo;
}
