@startuml

title __COMP2021_GROUP_PROJECT's Class Diagram__\n

  namespace hk.edu.polyu.comp.comp2021.cvfs {
    class hk.edu.polyu.comp.comp2021.cvfs.Application {
    }
  }
  

  namespace hk.edu.polyu.comp.comp2021.cvfs {
    namespace controller {
      class hk.edu.polyu.comp.comp2021.cvfs.controller.CVFSController {
      }
    }
  }
  

  namespace hk.edu.polyu.comp.comp2021.cvfs {
    namespace controller {
      class hk.edu.polyu.comp.comp2021.cvfs.controller.CommandSwitch {
      }
    }
  }
  

  namespace hk.edu.polyu.comp.comp2021.cvfs {
    namespace controller {
      enum CommandType {
      }
    }
  }
  

  namespace hk.edu.polyu.comp.comp2021.cvfs {
    namespace model {
      class hk.edu.polyu.comp.comp2021.cvfs.model.BinCri {
      }
    }
  }
  

  namespace hk.edu.polyu.comp.comp2021.cvfs {
    namespace model {
      class hk.edu.polyu.comp.comp2021.cvfs.model.CVFS {
      }
    }
  }
  

  namespace hk.edu.polyu.comp.comp2021.cvfs {
    namespace model {
      class hk.edu.polyu.comp.comp2021.cvfs.model.Criterion {
      }
    }
  }
  

  namespace hk.edu.polyu.comp.comp2021.cvfs {
    namespace model {
      class hk.edu.polyu.comp.comp2021.cvfs.model.Directory {
      }
    }
  }
  

  namespace hk.edu.polyu.comp.comp2021.cvfs {
    namespace model {
      class hk.edu.polyu.comp.comp2021.cvfs.model.Disk {
      }
    }
  }
  

  namespace hk.edu.polyu.comp.comp2021.cvfs {
    namespace model {
      enum DocType {
      }
    }
  }
  

  namespace hk.edu.polyu.comp.comp2021.cvfs {
    namespace model {
      class hk.edu.polyu.comp.comp2021.cvfs.model.Document {
      }
    }
  }
  

  namespace hk.edu.polyu.comp.comp2021.cvfs {
    namespace model {
      class hk.edu.polyu.comp.comp2021.cvfs.model.TraceLogger {
      }
    }
  }
  

  namespace hk.edu.polyu.comp.comp2021.cvfs {
    namespace model {
      abstract class hk.edu.polyu.comp.comp2021.cvfs.model.Unit {
      }
    }
  }
  

  namespace hk.edu.polyu.comp.comp2021.cvfs {
    namespace view {
      class hk.edu.polyu.comp.comp2021.cvfs.view.CVFSView {
      }
    }
  }
  

  hk.edu.polyu.comp.comp2021.cvfs.controller.CVFSController o-- hk.edu.polyu.comp.comp2021.cvfs.model.CVFS : cvfs
  hk.edu.polyu.comp.comp2021.cvfs.controller.CVFSController o-- hk.edu.polyu.comp.comp2021.cvfs.controller.CVFSController.loggerParser : logger
  hk.edu.polyu.comp.comp2021.cvfs.controller.CVFSController o-- hk.edu.polyu.comp.comp2021.cvfs.view.CVFSView : view
  hk.edu.polyu.comp.comp2021.cvfs.model.BinCri -up-|> hk.edu.polyu.comp.comp2021.cvfs.model.Criterion
  hk.edu.polyu.comp.comp2021.cvfs.model.BinCri o-- hk.edu.polyu.comp.comp2021.cvfs.model.Criterion : cri1
  hk.edu.polyu.comp.comp2021.cvfs.model.BinCri o-- hk.edu.polyu.comp.comp2021.cvfs.model.Criterion : cri2
  hk.edu.polyu.comp.comp2021.cvfs.model.CVFS o-- hk.edu.polyu.comp.comp2021.cvfs.model.Directory : cwd
  hk.edu.polyu.comp.comp2021.cvfs.model.CVFS o-- hk.edu.polyu.comp.comp2021.cvfs.model.Disk : disk
  hk.edu.polyu.comp.comp2021.cvfs.model.Criterion .up.|> java.lang.Cloneable
  hk.edu.polyu.comp.comp2021.cvfs.model.Directory -up-|> hk.edu.polyu.comp.comp2021.cvfs.model.Unit
  hk.edu.polyu.comp.comp2021.cvfs.model.Directory o-- hk.edu.polyu.comp.comp2021.cvfs.model.Directory : parent
  hk.edu.polyu.comp.comp2021.cvfs.model.Disk -up-|> hk.edu.polyu.comp.comp2021.cvfs.model.Directory
  hk.edu.polyu.comp.comp2021.cvfs.model.Document -up-|> hk.edu.polyu.comp.comp2021.cvfs.model.Unit
  hk.edu.polyu.comp.comp2021.cvfs.model.Document o-- hk.edu.polyu.comp.comp2021.cvfs.model.Directory : parent
  hk.edu.polyu.comp.comp2021.cvfs.model.Document o-- hk.edu.polyu.comp.comp2021.cvfs.model.DocType : type
  hk.edu.polyu.comp.comp2021.cvfs.model.Unit .up.|> java.io.Serializable


right footer


CVFS(Comp Virtual File System) Class Diagram proposed by Group 30: MAN Furui, WANG Meng, XING Shiji, ZHANG Yubo.
COMP2021 Object-Oriented Programming, Year 2020 Semester 1, The Hong Kong Polytechnic University.
endfooter

@enduml
